--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>fireworks</title>
+        <link rel="stylesheet" href="style.css">      
+    </head>
     <body>
         <header>
             <img id ="logo" src="/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
