--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>fireworks</title>
-        <link rel="stylesheet" href="style.css">      
+        <link rel="stylesheet" href="style.css">    
+        <meta name="google-site-verification" content="HrHV0RNJvVr7B079UzC3JnLl8nAmkYMQNrRqELIA0q4" />
     </head>
     <body>
         <header>
